<resources>
    <string name="app_name">GreenTransit</string>

    <string name="nav_home_title">Home</string>
    <string name="nav_home_news">Traffic</string>

    <!-- Paging -->
    <string name="load_state_retry">Retry</string>

    <!-- Permission -->
    <string name="request_location_permission_message">Require location permission for tracking.</string>
    <string name="request_permission_action_settings">Settings</string>

    <!-- Search -->
    <string name="search_title">Search Route</string>
    <string name="search_clear_text">Clear Text</string>

    <!-- Empty List -->
    <string name="routes_empty">No route found</string>
    <string name="stops_empty">No stop found</string>
    <string name="news_empty">No news found</string>

    <!-- Nearby routes -->
    <string name="nearby_routes_dest">to %s</string>
    <string name="nearby_routes_count">Nearby Routes (%d)</string>

    <!-- Region -->
    <string name="region_kln">Kowloon</string>
    <string name="region_hki">HK Island</string>
    <string name="region_nt">New Territories</string>

    <!-- Stop -->
    <string name="stop_coordinates">Stop %.3f, %.3f</string>
    <string name="stop_default_remark">GMB Stop</string>
    <string name="stop_tab_eta">Upcoming</string>
    <string name="stop_tab_routes">Routes</string>
    <string name="stop_routes_stop_name">Stop #%d: %s</string>
    <string name="stop_eta_shift_mins">mins</string>
    <string name="stop_eta_shift_code">%s (%s)</string>
    <string name="stop_eta_shift_dest">to %s</string>

    <!-- Route -->
    <string name="route_origin_title">From</string>
    <string name="route_dest_title">To</string>

    <!-- Route Direction -->
    <string name="route_direction_title">Directions</string>
    <string name="route_header">%s (%d)</string>
    <string name="route_direction">%s → %s</string>

    <string name="search_bar_content_desc">Search Route</string>
    <string name="my_location_content_desc">My Location</string>

    <!-- News -->
    <string name="news_header_title">Traffic Information at your fingertips</string>
    <string name="news_header_subtitle">Data provided by Transport Department</string>
    <string name="news_status_new">Recent</string>
    <string name="news_status_updated">Updated</string>
    
    <!-- News Detail -->
    <string name="news_detail_status_new_title">Recent News</string>
    <string name="news_detail_status_updated_title">Updated News</string>
    <string name="news_detail_date">Transport Department • %s</string>

</resources>