<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="?attr/searchBarColor"
    app:cardCornerRadius="@dimen/search_bar_corner_radius"
    app:cardElevation="@dimen/elevation_none"
    app:rippleColor="?attr/colorOnPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/search_icon_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginVertical="@dimen/spacing_large"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search_bar_content_desc"
            app:tint="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/search_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_mlarge"
            android:layout_marginVertical="@dimen/spacing_large"
            android:text="@string/search_title"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toEndOf="@id/search_icon_image_view"
            app:layout_constraintTop_toTopOf="@id/search_icon_image_view"
            app:layout_constraintBottom_toBottomOf="@id/search_icon_image_view"/>

        <ImageButton
            android:id="@+id/my_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:padding="@dimen/min_icon_touch_padding"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_my_location"
            android:contentDescription="@string/my_location_content_desc"
            app:tint="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>